--- a/app/src/main/res/layout/fragment_search_people_item.xml
+++ b/app/src/main/res/layout/fragment_search_people_item.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="0dp"
-        android:layout_height="64dp"
+        android:layout_height="70dp"
+        android:paddingTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -19,7 +20,7 @@
             android:id="@+id/pfpImagePeople"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginEnd="19dp"
+            android:layout_marginEnd="5dp"
             android:src="@drawable/profile_picture_placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="7dp"
+            android:layout_marginRight="2dp"
             android:layout_marginBottom="5dp"
             android:layout_toRightOf="@id/pfpImagePeople"
             android:text="full name"
@@ -46,7 +47,7 @@
             android:id="@+id/usernamePeople"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginTop="11dp"
             android:layout_toRightOf="@id/fullnamePeople"
             android:text="username"
@@ -59,7 +60,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fullnamePeople"
-            android:layout_marginBottom="10dp"
             android:layout_toRightOf="@id/pfpImagePeople"
             android:text="Title"
             android:textColor="@color/blackBase"
