--- a/app/src/main/res/layout/fragment_search_people.xml
+++ b/app/src/main/res/layout/fragment_search_people.xml
@@ -1,25 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="40dp"
     tools:context=".ui.search.SearchPeopleFragment">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/people_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="74dp"
-                android:background="@color/pinkDark"
-                >
+                android:paddingTop="10dp"
+                android:layout_marginStart="20dp">
             </androidx.recyclerview.widget.RecyclerView>
-        </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
