--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="greyDark">#9EA0A9</color>
     <color name="greyLight">#F3F3F8</color>
     <color name="greySoft">#F7F7FA</color>
+    <color name="SearchGrey">#373941</color>
 
     <color name="error">#FF5674</color>
     <color name="warning">#FFE485</color>
