--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -59,6 +59,7 @@
         android:id="@+id/postImageCardView"
         android:layout_width="0dp"
         android:layout_height="200dp"
+        android:foregroundGravity="center_horizontal"
         android:layout_margin="16dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
@@ -66,14 +67,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileImageCardView"
-        app:layout_constraintVertical_bias="0.2">
+        app:layout_constraintVertical_bias="0.2"
+        android:visibility="visible"
+        >
 
-        <ImageView
-            android:id="@+id/postImage"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/mediaViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/sample_image" />
+            android:orientation="horizontal"
+
+            />
 
     </androidx.cardview.widget.CardView>
 
