--- a/app/src/main/res/layout/fragment_search_posts.xml
+++ b/app/src/main/res/layout/fragment_search_posts.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="40dp"
     tools:context=".ui.search.SearchPostsFragment">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/posts_list"
         android:layout_width="match_parent"
@@ -12,4 +14,19 @@
         android:paddingTop="10dp"
         android:layout_marginStart="20dp">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/textViewNoResultFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/no_result_found"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/posts_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.014"
+        app:layout_constraintStart_toStartOf="@+id/posts_list"
+        app:layout_constraintTop_toTopOf="@+id/posts_list"
+        app:layout_constraintVertical_bias="0.497" />
 </androidx.constraintlayout.widget.ConstraintLayout>
