--- a/app/src/main/res/layout/fragment_search_people.xml
+++ b/app/src/main/res/layout/fragment_search_people.xml
@@ -30,4 +30,15 @@
             app:layout_constraintTop_toTopOf="@+id/people_list"
             app:layout_constraintVertical_bias="0.497" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
