--- a/app/src/main/res/menu/kebab_menu.xml
+++ b/app/src/main/res/menu/kebab_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_setting"
-        android:title="@string/setting" />
+        android:id="@+id/menu_edit"
+        android:title="@string/edit_profile" />
     <item
         android:id="@+id/menu_logout"
         android:title="@string/logout" />
