--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,6 +48,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
+        android:textSize="12dp"
         android:text="Follow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
