--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,13 @@
         android:id="@+id/navigation_search"
         android:name="com.example.artcon_test.ui.search.SearchFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search">
+
+        <action
+            android:id="@+id/action_navigation_search_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/navigation_add"
@@ -72,5 +78,6 @@
     <action
         android:id="@+id/action_global_navigation_add_post"
         app:destination="@id/navigation_add_post" />
+
 
 </navigation>
