--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -60,7 +60,7 @@
         tools:layout_editor_absoluteX="37dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/people_list"
+            android:id="@+id/notifications_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
