--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,14 +9,36 @@
         android:id="@+id/navigation_home"
         android:name="com.example.artcon_test.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_notifications"
+            app:destination="@id/navigation_notifications" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_notifications"
+        android:name="com.example.artcon_test.ui.home.NotificationsFragment"
+        android:label="@string/title_notifications"
+        tools:layout="@layout/fragment_notifications">
+
+        <action
+            android:id="@+id/action_notifications_to_profile"
+            app:destination="@id/navigation_profile" />
+        <action
+            android:id="@+id/action_notifications_to_post"
+            app:destination="@id/navigation_view_post" />
+        <action
+            android:id="@+id/action_notifications_to_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.example.artcon_test.ui.search.SearchFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search">
-
         <action
             android:id="@+id/action_navigation_search_to_navigation_profile"
             app:destination="@id/navigation_profile" />
