--- a/app/src/main/res/layout/fragment_accounttype_notartist.xml
+++ b/app/src/main/res/layout/fragment_accounttype_notartist.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/textView4"
+        style="@style/Text"
         android:layout_width="302dp"
         android:layout_height="23dp"
         android:text="@string/because"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -34,13 +34,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tohire"
-            android:textSize="15sp" />
+            android:textSize="16sp" />
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tolikeart"
-            android:textSize="15sp" />
+            android:textSize="16sp" />
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
