--- a/app/src/main/res/layout/activity_profile_setup.xml
+++ b/app/src/main/res/layout/activity_profile_setup.xml
@@ -35,6 +35,7 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/Text"
         android:layout_width="162dp"
         android:layout_height="33dp"
         android:fontFamily="@font/ubuntu"
@@ -46,10 +47,11 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.116"></TextView>
+        app:layout_constraintVertical_bias="0.116" />
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/setup_profile"
@@ -65,8 +67,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/setup_profile_fragment"
         android:layout_width="362dp"
-        android:layout_height="507dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
