--- a/app/src/main/res/layout/fragment_setup_accounttype.xml
+++ b/app/src/main/res/layout/fragment_setup_accounttype.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_setup_accounttype"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragment.setupAccounttype">
 
 
@@ -24,15 +24,15 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="match_parent"
+        style="@style/Text"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30sp"
         android:layout_marginVertical="15sp"
+        android:layout_marginStart="30dp"
         android:text="@string/Iam"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintVertical_bias="0.05" />
@@ -40,12 +40,14 @@
 
     <TextView
         android:id="@+id/normalUser"
+        style="@style/Text"
         android:layout_width="138dp"
         android:layout_height="95dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/account_type"
         android:gravity="center"
         android:text="@string/looking_for_artists"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
@@ -53,11 +55,13 @@
 
     <TextView
         android:id="@+id/artist"
+        style="@style/Text"
         android:layout_width="138dp"
         android:layout_height="95dp"
         android:background="@drawable/account_type"
         android:gravity="center"
         android:text="@string/an_artist"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/normalUser"
         app:layout_constraintHorizontal_bias="0.583"
@@ -69,23 +73,24 @@
         android:id="@+id/account_type"
         android:layout_width="369dp"
         android:layout_height="203dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artist"
-        app:layout_constraintVertical_bias="0.287" />
+        app:layout_constraintTop_toBottomOf="@+id/artist" />
 
     <Button
         android:id="@+id/next_button"
         style="@style/ContinueButton"
         android:layout_width="170dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_type"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintTop_toBottomOf="@+id/account_type" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
