--- a/app/src/main/res/layout/fragment_setup_profilepicture.xml
+++ b/app/src/main/res/layout/fragment_setup_profilepicture.xml
@@ -40,6 +40,7 @@
 
         <TextView
             android:id="@+id/textView3"
+            style="@style/Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
