--- a/app/src/main/res/layout/fragment_setup_interests.xml
+++ b/app/src/main/res/layout/fragment_setup_interests.xml
@@ -55,12 +55,11 @@
         style="@style/ContinueButton"
         android:layout_width="170dp"
         android:layout_height="50dp"
+        android:layout_marginTop="30dp"
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/grid_interest"
-        app:layout_constraintVertical_bias="0.225" />
+        app:layout_constraintTop_toBottomOf="@+id/grid_interest"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
