--- a/app/src/main/res/layout/fragment_setup_profilepicture.xml
+++ b/app/src/main/res/layout/fragment_setup_profilepicture.xml
@@ -23,7 +23,7 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.051"></ImageView>
+            app:layout_constraintVertical_bias="0.051" />
 
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -43,41 +43,36 @@
             style="@style/Text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:text="@string/add_profilepicture"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/photo"
-            app:layout_constraintVertical_bias="0.179" />
+            app:layout_constraintTop_toBottomOf="@+id/photo" />
 
         <Button
             android:id="@+id/addPhoto"
-            style="@style/ContinueButton"
+            style="@style/CancelButton"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:layout_marginTop="20dp"
             android:text="@string/add_picture"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:layout_constraintVertical_bias="0.188" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <Button
             android:id="@+id/next_button"
             style="@style/ContinueButton"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:text="@string/next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addPhoto"
-            app:layout_constraintVertical_bias="0.86" />
+            app:layout_constraintTop_toBottomOf="@+id/addPhoto" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
