--- a/app/src/main/res/layout/fragment_search_people_item.xml
+++ b/app/src/main/res/layout/fragment_search_people_item.xml
@@ -1,70 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="horizontal"
+    android:gravity="start|center_vertical"
+    android:paddingVertical="10dp"
+    android:background="@drawable/ripple"
+    android:clickable="true"
+    android:focusable="true">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:paddingTop="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
 
-        <com.google.android.material.imageview.ShapeableImageView
+<com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/pfpImagePeople"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/picasso_placeholder"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circleImageView"
-            app:strokeColor="@android:color/white"
-            app:strokeWidth="5dp" />
+            app:shapeAppearanceOverlay="@style/circleImageView"/>
 
-        <TextView
-            android:id="@+id/fullnamePeople"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@id/pfpImagePeople"
-            android:text=""
-            android:textColor="@color/blackBase"
-            android:textSize="18sp"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/usernamePeople"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="11dp"
-            android:layout_toRightOf="@id/fullnamePeople"
-            android:text=""
-            android:textAlignment="center"
-            android:textColor="@color/greyDark"
-            android:textSize="16sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+            <TextView
+                android:id="@+id/fullnamePeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="hi"
+                android:textColor="@color/blackBase"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/usernamePeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="username"
+                android:layout_marginVertical="2dp"
+                android:textAlignment="center"
+                android:textColor="@color/greyDark"
+                android:textSize="14sp" />
 
         <TextView
             android:id="@+id/titlePeople"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fullnamePeople"
-            android:layout_toRightOf="@id/pfpImagePeople"
-            android:text=""
+            android:text="draw"
             android:textColor="@color/blackBase"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
-    </RelativeLayout>
+    </LinearLayout>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
