enhancements in profile

--- a/app/src/main/res/drawable/follow_button_background.xml
+++ b/app/src/main/res/drawable/follow_button_background.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid
-        android:color="#C3FFFFFF"/>
-    <corners android:radius="100dp" />
 
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/greySoft">
+    <item android:id="@android:id/background">
+        <shape
+            android:shape="rectangle">
+            <solid
+                android:color="#C3FFFFFF"/>
+            <corners android:radius="100dp" />
+
+        </shape>
+    </item>
+</ripple>
