--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,11 +45,11 @@
         android:id="@+id/followButton"
         style="@style/FollowButton"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="38dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
-        android:textSize="12dp"
-        android:text="Follow"
+        android:textSize="14sp"
+        android:text="@string/follow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
