--- a/app/src/main/res/layout/fragment_search_posts.xml
+++ b/app/src/main/res/layout/fragment_search_posts.xml
@@ -11,8 +11,7 @@
         android:id="@+id/posts_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="10dp"
-        android:layout_marginStart="20dp">
+        android:paddingTop="10dp">
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
